# shark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SharkConfig.h.in  aws_config_example.json  conf.py  config_example.json  dependencies.txt  donkey_config.json  led_status.py  load_data.py  models.py  predict.py  requirements.txt  shark.py  shark.service  sharkweb.service  sync.py  sync_srv.py  train.py
contrib/camcv/: camcv.c
contrib/joystick/: joystick.hh
contrib/mcqueen/: Notes on maxbotics sensors.txt  README  app.cpp  makefile  publish.sh
contrib/mcqueen/atmega328p/: car.cpp.hex  car_v1_1.cpp.hex
contrib/mcqueen/atmega328p/car/: car.ino
contrib/mcqueen/atmega328p/car_v1_0/: direction.ino  throttle.ino
contrib/mcqueen/atmega328p/car_v1_1/: car_v1_1.ino  throttle.ino
contrib/mcqueen/atmega328p/sensing/: i2c.ino  pca9685.ino  sensing.cpp.hex  sensing.ino
contrib/mcqueen/car/: .cproject  .project  CMakeLists.txt  Car.cpp  Car.h  Gpio.cpp  Gpio.h  I2cBus.cpp  I2cBus.h  PCA9685.cpp  PCA9685.h  Pin.cpp  Pin.h  PwmEsc.cpp  PwmEsc.h  PwmLvSonarEz2.cpp  PwmLvSonarEz2.h  PwmServo.cpp  PwmServo.h  RaspberryPi.cpp  RaspberryPi.h  app.cpp  car  makefile  refreshcode
contrib/mcqueen/flash_pin7/: flash_pin7  flash_pin7.c
contrib/mcqueen/test/: .cproject  rpi.cpp
contrib/mxnet/: CMakeLists.txt  example.cpp  example.mm  mxnet_predict-all.cc
contrib/tiny_jpeg/: tiny_jpeg.h
contrib/v4l_helper/: capture_raw_frames.c  capture_raw_frames.h
contrib/wiring_pi_lite/: CMakeLists.txt  wiringPiI2clite.c  wiringPiLite.h  wiringPi_i2c_lite.cpp
contrib/zmq/: zhelpers.h
docs/: aws_setup.md  bot_setup.md
scripts/: command  movie_from_log.py  rem_env  start_dest_sync
src/: config.cpp  config.h  json.cpp  json.h  lidar.cpp  lidar.h  main.cpp  path.cpp  path.h  pointgrey.cpp  pointgrey.h  tmath.cpp  tmath.h
web/: webapp.py
web/static/fonts/: font info.txt
web/static/js/: main.js
